--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
                 <h1>Care Bears</h1>
             </div>
     
-            <img src="/public/assets/images/bear-1.png" alt="">
+            <img src="./public/assets/images/bear-1.png" alt="">
         </div>
         <div class="grid">
-            <img src="/public/assets/images/bear-2-pink.png" alt="">
-            <img src="/public/assets/images/bear-3-green.png" alt="">
-            <img src="/public/assets/images/bear-4.png" alt="">
-            <img src="/public/assets/images/bear-5-yellow.png" alt="">
-            <img src="/public/assets/images/bear-6.png" alt="">
-            <img src="/public/assets/images/bear-7-blue.png" alt="">
-            <img src="/public/assets/images/bear-8-cyan.png" alt="">
-            <img src="/public/assets/images/bear-9-red.png" alt="">
-            <img src="/public/assets/images/bear-10.png" alt="">
+            <img src="./public/assets/images/bear-2-pink.png" alt="">
+            <img src="./public/assets/images/bear-3-green.png" alt="">
+            <img src="./public/assets/images/bear-4.png" alt="">
+            <img src="./public/assets/images/bear-5-yellow.png" alt="">
+            <img src="./public/assets/images/bear-6.png" alt="">
+            <img src="./public/assets/images/bear-7-blue.png" alt="">
+            <img src="./public/assets/images/bear-8-cyan.png" alt="">
+            <img src="./public/assets/images/bear-9-red.png" alt="">
+            <img src="./public/assets/images/bear-10.png" alt="">
     
         </div>
     </div>
